--- a/cpa/templates/index.html
+++ b/cpa/templates/index.html
@@ -130,9 +130,9 @@
     <form action="{{ url_for('login') }}" method="POST">
         <h3>Login Here</h3>
         <label for="username">Username</label>
-        <input type="text" placeholder="Email or Phone" id="username" name="username" required>
+        <input type="text" placeholder="Folio" id="username" name="username" required>
         <label for="password">Password</label>
-        <input type="password" placeholder="Password" id="password" name="password" required>
+        <input type="password" placeholder="Maticule" id="password" name="password" required>
         <button type="submit" class="btn">Log In</button>
     </form>
 </body>
