--- a/cpa/templates/index.html
+++ b/cpa/templates/index.html
@@ -1,126 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Login</title>
+    <title>log in</title>
+ 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+    <!--Stylesheet-->
     <style media="screen">
-      *,
-      *:before,
-      *:after{
-          padding: 0;
-          margin: 0;
-          box-sizing: border-box;
-      }
-      body{
-          background-color: #080710;
-      }
-      .background{
-          width: 430px;
-          height: 520px;
-          position: absolute;
-          transform: translate(-50%,-50%);
-          left: 50%;
-          top: 50%;
-      }
-      .background .shape{
-          height: 200px;
-          width: 200px;
-          position: absolute;
-          border-radius: 50%;
-      }
-      .shape:first-child{
-          background: linear-gradient(#1845ad, #23a2f6);
-          left: -80px;
-          top: -80px;
-      }
-      .shape:last-child{
-          background: linear-gradient(to right, #ff512f, #f09819);
-          right: -30px;
-          bottom: -80px;
-      }
-      form{
-          height: 520px;
-          width: 400px;
-          background-color: rgba(255,255,255,0.13);
-          position: absolute;
-          transform: translate(-50%,-50%);
-          top: 50%;
-          left: 50%;
-          border-radius: 10px;
-          backdrop-filter: blur(10px);
-          border: 2px solid rgba(255,255,255,0.1);
-          box-shadow: 0 0 40px rgba(8,7,16,0.6);
-          padding: 50px 35px;
-      }
-      form *{
-          font-family: 'Poppins', sans-serif;
-          color: #ffffff;
-          letter-spacing: 0.5px;
-          outline: none;
-          border: none;
-      }
-      form h3{
-          font-size: 32px;
-          font-weight: 500;
-          line-height: 42px;
-          text-align: center;
-      }
-      label{
-          display: block;
-          margin-top: 30px;
-          font-size: 16px;
-          font-weight: 500;
-      }
-      input{
-          display: block;
-          height: 50px;
-          width: 100%;
-          background-color: rgba(255,255,255,0.07);
-          border-radius: 3px;
-          padding: 0 10px;
-          margin-top: 8px;
-          font-size: 14px;
-          font-weight: 300;
-      }
-      ::placeholder{
-          color: #e5e5e5;
-      }
-      .btn{
-          margin-top: 50px;
-          width: 100%;
-          background-color: #ffffff;
-          color: #080710;
-          padding: 15px 0;
-          font-size: 18px;
-          font-weight: 600;
-          border-radius: 5px;
-          cursor: pointer;
-      }
-      .social{
-          margin-top: 30px;
-          display: flex;
-      }
-      .social div{
-          background: red;
-          width: 150px;
-          border-radius: 3px;
-          padding: 5px 10px 10px 5px;
-          background-color: rgba(255,255,255,0.27);
-          color: #eaf0fb;
-          text-align: center;
-      }
-      .social div:hover{
-          background-color: rgba(255,255,255,0.47);
-      }
-      .social .fb{
-          margin-left: 25px;
-      }
-      .social i{
-          margin-right: 4px;
-      }
+        *,
+        *:before,
+        *:after {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+        }
+        body {
+            background-color: #080710;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+        .background {
+            width: 430px;
+            height: 520px;
+            position: absolute;
+            transform: translate(-50%, -50%);
+            left: 50%;
+            top: 50%;
+        }
+        .background .shape {
+            height: 200px;
+            width: 200px;
+            position: absolute;
+            border-radius: 50%;
+        }
+        .shape:first-child {
+            background: linear-gradient(#1845ad, #23a2f6);
+            left: -80px;
+            top: -80px;
+        }
+        .shape:last-child {
+            background: linear-gradient(to right, #f5e90c, #f09819);
+            right: -30px;
+            bottom: -80px;
+        }
+        form {
+            height: 520px;
+            width: 400px;
+            background-color: rgba(255, 255, 255, 0.13);
+            position: absolute;
+            transform: translate(-50%, -50%);
+            top: 50%;
+            left: 50%;
+            border-radius: 10px;
+            backdrop-filter: blur(10px);
+            border: 2px solid rgba(255, 255, 255, 0.1);
+            box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
+            padding: 30px 35px; /* Réduit un peu le padding du formulaire pour rapprocher les éléments */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        form * {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #ffffff;
+            letter-spacing: 0.5px;
+            outline: none;
+            border: none;
+            width: 100%;
+            max-width: 100%;
+        }
+        form h3 {
+            font-size: 32px;
+            font-weight: 500;
+            line-height: 42px;
+            text-align: center;
+            margin-bottom: 20px; /* Réduit la marge sous le titre */
+        }
+        label {
+            display: block;
+            margin-top: 20px;
+            font-size: 16px;
+            font-weight: 500;
+            text-align: center; /* Centre le texte des labels */
+            width: 100%;
+        }
+        input {
+            height: 50px;
+            background-color: rgba(255, 255, 255, 0.07);
+            border-radius: 3px;
+            padding: 0 10px;
+            margin-top: 8px;
+            font-size: 14px;
+            font-weight: 300;
+            color: #ffffff;
+        }
+        ::placeholder {
+            color: #e5e5e5;
+        }
+        .btn {
+            margin-top: 20px;
+            width: 100%;
+            background-color: #ffffff;
+            color: #080710;
+            padding: 15px 0;
+            font-size: 18px;
+            font-weight: 600;
+            border-radius: 5px;
+            cursor: pointer;
+            max-width: 100%;
+        }
+        .social {
+            margin-top: 30px;
+            display: flex;
+            justify-content: center;
+        }
+        .social div {
+            width: 150px;
+            border-radius: 3px;
+            padding: 5px 10px 10px 5px;
+            background-color: rgba(255, 255, 255, 0.27);
+            color: #eaf0fb;
+            text-align: center;
+            margin: 0 10px;
+            cursor: pointer;
+        }
+        .social div:hover {
+            background-color: rgba(255, 255, 255, 0.47);
+        }
+        .social i {
+            margin-right: 4px;
+        }
+        #username-img {
+            display: block;
+            width:450px; /* Ajuste la taille de l'image */
+            margin-top: -50px; /* Décale l'image vers le haut */
+            border-radius: 50%; /* Assure que l'image est arrondie */
+            margin-left : 60px;
+            margin-bottom:20px;
+            
+        }
+        h2{
+            margin-top:20px;
+            margin-left : 190px;   
+        }
     </style>
+
+    
 </head>
 <body>
     <div class="background">
@@ -128,12 +157,18 @@
         <div class="shape"></div>
     </div>
     <form action="{{ url_for('login') }}" method="POST">
-        <h3>Login Here</h3>
-        <label for="username">Username</label>
+        
+       <img src="{{ url_for('static', filename='cropped.png') }}" alt="logo">
+        <h2  > Log in Here</h2>
+        <label for="username">Folio</label>
         <input type="text" placeholder="Folio" id="username" name="username" required>
-        <label for="password">Password</label>
-        <input type="password" placeholder="Maticule" id="password" name="password" required>
+
+        <label for="password">Matricule</label>
+        <input type="password" placeholder="Matricule" id="password" name="password" required>
+
         <button type="submit" class="btn">Log In</button>
     </form>
 </body>
+
 </html>
+
