--- a/cpa/templates/secretaire.html
+++ b/cpa/templates/secretaire.html
@@ -202,6 +202,9 @@
                 {% endfor %}
             </tbody>
         </table>
+        <a href="{{ url_for('download_excel') }}">
+            <button>Print</button>
+        </a>
     </div>
     <script>
 
